<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/searchview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <!-- Content inside the CardView -->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:src="@drawable/bamboo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/Bamboo"
            android:textColor="@color/Green"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BambooDes"
            android:textSize="16sp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1"
        android:layout_margin="16dp"
        android:background="@color/cardview_light_background">

        <!-- Content inside the CardView -->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/jasmine"
            android:layout_margin="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/Jasmine"
            android:textColor="@color/Green"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView2"
        android:layout_margin="16dp"
        android:background="@color/cardview_dark_background">

        <!-- Content inside the CardView -->
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/lemon"
            android:layout_margin="20dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/Lemon"
            android:textColor="@color/Green"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView3"
        android:layout_margin="16dp"
        android:background="@color/cardview_dark_background">

        <!-- Content inside the CardView -->
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/zzplant"
            android:layout_margin="20dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/ZZPlant"
            android:textColor="@color/Green"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="14dp"
        android:layout_height="729dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>